--- a/src/css/inc/_objects.sidebar.css
+++ b/src/css/inc/_objects.sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-	background: #eee url("././img/ship-blue.jpg") no-repeat center top;
+	background: #eee url("../../img/ship-blue.jpg") no-repeat center top;
 	background-size: auto auto;
 	background-color: $background-color-main;
 	height: 100vh;
