--- a/src/css/style.css
+++ b/src/css/style.css
@@ -255,6 +255,13 @@ input[type=checkbox],input[type=number] {
     }
 }
 
+.tmfheader {
+    background-color: #000000;
+    overflow-y: auto;
+    padding: .5rem;
+    position: fixed;
+}
+
 .sidebar {
     background: #eee url(../img/ship-blue.jpg) no-repeat center top;
     background-size: auto auto;
@@ -263,7 +270,7 @@ input[type=checkbox],input[type=number] {
     overflow-y: auto;
     padding: .5rem;
     position: fixed;
-    top: 0;
+    top: 25;
     left: 0
 }
 
