--- a/src/css/style.css
+++ b/src/css/style.css
@@ -237,7 +237,7 @@ input[type=checkbox],input[type=number] {
 }
 
 @media (max-width: 767px) {
-    #sidebarSFSB:target+.main {
+    #sidebar:target+.main {
         transform:translateY(100vh);
         transition: transform .3s ease
     }
@@ -255,7 +255,7 @@ input[type=checkbox],input[type=number] {
     }
 }
 
-.sidebarSFSB {
+.sidebar {
     background: #eee url(../img/ship-blue.jpg) no-repeat center top;
     background-size: auto auto;
     background-color: #001533;
@@ -263,20 +263,20 @@ input[type=checkbox],input[type=number] {
     overflow-y: auto;
     padding: .5rem;
     position: fixed;
-    top: 25;
+    top: 0;
     left: 0
 }
 
-.contents li a,.sidebarSFSB h3,.sidebarSFSB p {
+.contents li a,.sidebar h3,.sidebar p {
     color: #c3cdda
 }
 
-.sidebarSFSB .icon,.sidebar__control {
+.sidebar .icon,.sidebar__control {
     fill: #c3cdda
 }
 
 @media (max-width: 767px) {
-    .sidebarSFSB {
+    .sidebar {
         font-size:1.1em;
         transition: transform .3s ease;
         transform: translateY(-100vh);
@@ -284,7 +284,7 @@ input[type=checkbox],input[type=number] {
         z-index: 100
     }
 
-    #sidebarSFSB:target {
+    #sidebar:target {
         transform: translateY(0)
     }
 
@@ -310,13 +310,13 @@ input[type=checkbox],input[type=number] {
         text-align: right
     }
 
-    .main,.sidebarSFSB {
+    .main,.sidebar {
         padding-top: 3em
     }
 }
 
 @media (min-width: 768px) {
-    .sidebarSFSB {
+    .sidebar {
         width:35%
     }
 
@@ -326,7 +326,7 @@ input[type=checkbox],input[type=number] {
 }
 
 @media (min-width: 1200px) {
-    .sidebarSFSB {
+    .sidebar {
         width:25%
     }
 }
