--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1728,7 +1728,7 @@ ul.supporters {
     align-items: center;
     background-color: hsl(0, 0%, 29%);
     border-radius: 0px 0px 0 0;
-    color: #fff;
+    color: #fff !important;
     display: flex !important;
     font-weight: 700;
     justify-content: space-between !important;
@@ -1744,5 +1744,5 @@ ul.supporters {
     border-color: hsl(0, 0%, 86%);
     border-radius: 0px;
     border-style: solid;
-    color: hsl(0, 0%, 29%);
+    color: hsl(0, 0%, 29%)  !important;
 }
