--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1746,7 +1746,7 @@ ul.supporters {
     border-style: solid;
     color: hsl(0, 0%, 29%)  !important;
 }
-.tmf-header {
+.tmfheader {
     color: red;
     position: fixed  !important;
 }
