--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1747,7 +1747,7 @@ ul.supporters {
     color: hsl(0, 0%, 29%)  !important;
 }
 .tmfheader {
-    color: red;
+    color: #8c1910;
     position: fixed  !important;
 }
 .site-title {
@@ -1767,4 +1767,58 @@ ul.supporters {
     margin-block-end: 0.67em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+}
+.site-title a, .site-description {
+    color: #8c1910;
+}
+.site-title a {
+    display: block;
+    padding: 10px 0;
+    color: #333;
+    max-width: 100%;
+}
+.site-description {
+    font-size: 14px;
+    font-weight: 400;
+    float: left;
+    margin-left: 20px;
+    line-height: 60px;
+    padding: 10px 0;
+}
+.social-links {
+    float: right;
+    position: relative;
+    padding-top: 5px;
+    margin-top: 14px;
+}
+.social-links li {
+    margin-right: 10px;
+    margin-left: 0;
+    border-right: 1px solid rgba(0,0,0,0.05);
+    padding-right: 10px;
+    margin-top: 10px;
+    display: inline-block;
+    line-height: 16px;
+    font-size: 0;
+}
+.social-links li a {
+    color: rgba(0,0,0,0.7);
+    font-size: 20px;
+    display: block!important;
+    position: relative;
+    text-align: center;
+}
+.fab {
+    font-family: "Font Awesome 5 Brands";
+}
+.fa, .fab, .fad, .fal, .far, .fas {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    width: 1em;
+    text-align: center;
 }
