--- a/src/css/style.css
+++ b/src/css/style.css
@@ -230,9 +230,9 @@ input[type=checkbox],input[type=number] {
     background-color: #001533;
     padding: .5rem;
     position: fixed;
-    top: 108px;
+    top: 10vh;
     overflow-y: auto;
-    height:100%;
+    height:90vh;
 }
 
 .main * {
@@ -268,11 +268,11 @@ input[type=checkbox],input[type=number] {
     background: #eee url(../img/ship-blue.jpg) no-repeat center top;
     background-size: auto auto;
     background-color: #001533;
-    height: 100vh;
+    height: 90vh;
     overflow-y: auto;
     padding: .5rem;
     position: fixed;
-    top: 108px;
+    top: 10vh;
     left: 0;
 }
 
@@ -1758,6 +1758,7 @@ ul.supporters {
 .tmfheader {
     color: #8c1910;
     position: fixed  !important;
+    height:10vh;
 }
 .site-title {
     font-size: 30px;
